# cnb-mturk

./: README.md  pyproject.toml  question.xml  question_form.xml
cnb_mturk/: create_task_xml.py  create_tasks.py  get_results.py
tasks/: 3DW3BNF1HK8WMZ7ZPHJT9JLQ8IVV89.json
